# Flask

./: .gitignore  README.md
Flask-blog/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  wsgi.py
Flask-blog/blog/: app.py  commands.py  config.py  db.sqlite  extensions.py  models.py
Flask-blog/blog/admin/: __init__.py  views.py
Flask-blog/blog/api/: article.py
Flask-blog/blog/api/permissions/: user.py
Flask-blog/blog/articles/: views.py
Flask-blog/blog/auth/: views.py
Flask-blog/blog/authors/: views.py
Flask-blog/blog/forms/: login.py  user.py
Flask-blog/blog/schemas/: __init__.py  article.py  author.py  tag.py  user.py
Flask-blog/blog/templates/: base.html  navbar.html
Flask-blog/blog/templates/articles/: article.html  article_by_tag_name.html  create.html  list.html
Flask-blog/blog/templates/auth/: login.html
Flask-blog/blog/templates/authors/: list.html
Flask-blog/blog/templates/macro/: formhelpers.html
Flask-blog/blog/templates/users/: list.html  profile.html  register.html  user.html
Flask-blog/blog/users/: views.py
Flask-blog/migrations/versions/: 174242f4e983_is_staff_column.py  25ae3f397144_.py  4d7c0423a763_.py  7612fda88eaa_.py  7dc58730a17e_.py  dfe23746d86c_firstname_lastname.py
