[tool.poetry]
name = "Flask-blog"
version = "0.1.0"
description = ""
authors = ["Sergey Lobanov <lobanovjkee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Login = "^0.5.0"
python-dotenv = "^0.17.1"
click = "^8.0.1"
Flask-Migrate = "^3.0.0"
WTForms = "^2.3.3"
email-validator = "^1.1.3"
Flask-WTF = "^0.15.1"
Flask-Admin = "^1.5.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
